Removed deprecated calls